# pgn4people-poc-demo

./: .gitignore  LICENSE  README.md  setup.cfg
docs/: development_notes.md  game-tree-concepts.md  integrating_python-chess.md  order_of_tokens.md  status_and_to_dos.md  transposition.md
pgn4people_poc_demo/: __init__.py  __version__.py  build_tree.py  classes_arboreal.py  compile_game_tree_report.py  constants.py  display_chess_board.py  display_text_comments.py  error_processing.py  experimental.py  game-tree.py  jdr_utilities.py  pgn_tokenizer.py  pgn_utilities.py  process_pgn_file.py  python_chess_utilities.py  traverse.py  traverse_tree.py  utilities.py  variations_table.py
pgn4people_poc_demo/static/css/: styles.css
pgn4people_poc_demo/static/data/: demo_pgn_1.pgn  demo_pgn_1_deprecated.pgn  demo_pgn_1_excessive_NAGs.pgn  demo_pgn_1_no_initial_comment.pgn  demo_pgn_1_without_long_annotation.pgn
pgn4people_poc_demo/templates/: about.html  experimental.html  site_template.html  under_construction.html
pgn4people_poc_demo/templates/traverse/: dump_pgn.html  report.html  variations_table.html
