[metadata]
name = pgn4people-poc-demo

# version = 0.0.1

# The following version directive is one component of providing a single source
# for the version number.
# For more information, see the docstring comment in the __version__.py
# file in the module-code directory.
version = attr: pgn4people_poc_demo.__version__.__version__

author = Jim Ratliff
author_email = jim@jim-ratliff.name
description = Web app version of viewer of PGN for highly nested chess games and opening repertoires
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jimratliff/pgn4people-poc
project_urls =
    Bug Tracker = https://github.com/jimratliff/pgn4people-poc/issues
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers 

[options]
# package_dir =
#     = src
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires = 
    flask

# [options.packages.find]
# where = src

# [options.entry_points]
# console_scripts =
#     pgn4people = pgn4people_poc.__main__:main

[bdist_wheel]
python-tag = py39